docs: add benchmarking usage guide to README
- Document new JMH benchmarks for assessing JSON parsing performance.
- Include examples for running suites like TwitterBench, SolanaBlockBench, and Base64Bench.
- Explain setup requirements, JDK configuration, and benchmark execution options.

chore(core): remove unused methods from JIUtil

- Delete `fieldHashCode`, `fieldCompare`, and `compileReplacePattern` methods.
- Clean up deprecated logic to streamline utility class.